// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar shell snapshots > renders the collapsed rail after the crossfade settles, in place 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root collapsed railIn quietBars"
    data-shell-mode="desktop"
    style=""
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="Open sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="railFish"
          data-content="965fe321"
          fill="none"
          height="17.6580310880829"
          viewBox="0 0 23.16 17.04"
          width="24"
        />
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="18"
        viewBox="0 0 16 16"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
      <button
        aria-label="Switch layout"
        class="layoutSwitch layoutSwitchRail"
        title="Mobile layout"
        type="button"
      >
        <svg
          data-content="97beeac2"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the compact drawer chrome in the default locale 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="compactShell"
    data-compact-shell=""
    data-shell-mode="compact"
  >
    <button
      aria-label="收起侧边栏"
      class="backdrop"
      type="button"
    />
    <div
      class="drawer"
      data-compact-drawer=""
      style="width: 320px;"
    >
      <div
        class="logoRow"
      >
        <button
          aria-label="新建会话"
          class="brand wide"
          type="button"
        >
          <svg
            aria-hidden="true"
            data-content="951274b9"
            fill="none"
            height="24"
            viewBox="0 0 182 24"
            width="182"
          />
        </button>
        <button
          aria-label="收起侧边栏"
          class="iconButton"
          type="button"
        >
          <svg
            data-content="35f95b0c"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
      <div
        class="regionArea"
      >
        <div
          data-slot="sidebar.workspaces"
          style="display: contents;"
        />
      </div>
    </div>
    <nav
      aria-label="会话"
      class="compactNav"
      data-compact-nav=""
    >
      <button
        aria-label="会话"
        aria-pressed="true"
        class="navItem"
        type="button"
      >
        <svg
          data-content="35f95b0c"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span>
          会话
        </span>
      </button>
      <button
        aria-label="新建会话"
        class="navItem"
        type="button"
      >
        <svg
          data-content="c0ce4dcc"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span>
          新会话
        </span>
      </button>
      <div
        class="navSlot"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="navSlot"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
      <button
        aria-label="切换布局"
        class="navItem"
        title="桌面布局"
        type="button"
      >
        <svg
          data-content="97beeac2"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span>
          桌面布局
        </span>
      </button>
    </nav>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column (wordmark, capsule, empty holes) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    data-shell-mode="desktop"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="New session"
        class="brand wide"
        type="button"
      >
        <svg
          aria-hidden="true"
          data-content="951274b9"
          fill="none"
          height="24"
          viewBox="0 0 182 24"
          width="182"
        />
      </button>
      <button
        aria-label="Collapse sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        New Session
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
      <button
        aria-label="Switch layout"
        class="layoutSwitch"
        title="Mobile layout"
        type="button"
      >
        <svg
          data-content="97beeac2"
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span>
          Mobile layout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column in the default locale (zh, no setLocale) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    data-shell-mode="desktop"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="新建会话"
        class="brand wide"
        type="button"
      >
        <svg
          aria-hidden="true"
          data-content="951274b9"
          fill="none"
          height="24"
          viewBox="0 0 182 24"
          width="182"
        />
      </button>
      <button
        aria-label="收起侧边栏"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="新建会话"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        新会话
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
      <button
        aria-label="切换布局"
        class="layoutSwitch"
        title="移动布局"
        type="button"
      >
        <svg
          data-content="97beeac2"
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span>
          移动布局
        </span>
      </button>
    </div>
  </div>
</div>
`;
